tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-east-1/apigateway-get-rest-apis.json
{
    "items": [
        {
            "apiKeySource": "HEADER",
            "binaryMediaTypes": [
                "application/zip"
            ],
            "createdDate": "2021-08-16T15:54:22+00:00",
            "description": "API for Cloudrail-develop",
            "disableExecuteApiEndpoint": false,
            "endpointConfiguration": {
                "types": [
                    "REGIONAL"
                ]
            },
            "id": "a7l0j273ea",
            "minimumCompressionSize": 0,
            "name": "Cloudrail-develop-API",
            "tags": {
                "Environment": "develop",
                "Managed_by": "terraform",
                "Name": "Cloudrail-develop-API",
                "Project": "Cloudrail"
            }
        }
    ]
}
