tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-east-1/ec2-describe-internet-gateways.json
{
    "InternetGateways": [
        {
            "Attachments": [
                {
                    "State": "available",
                    "VpcId": "vpc-0e39b445bad43bfed"
                }
            ],
            "InternetGatewayId": "igw-0082ea7ef9fc55ff8",
            "OwnerId": "167389268608",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "develop"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Tier",
                    "Value": "Public"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-develop-Public-IGW"
                }
            ]
        },
        {
            "Attachments": [],
            "InternetGatewayId": "igw-090198776bc976edb",
            "OwnerId": "167389268608",
            "Tags": []
        }
    ]
}
