tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-east-1/ec2-describe-transit-gateway-vpc-attachments.json
{
    "TransitGatewayVpcAttachments": [
        {
            "CreationTime": "2020-09-10T15:30:45+00:00",
            "Options": {
                "ApplianceModeSupport": "disable",
                "DnsSupport": "enable",
                "Ipv6Support": "disable"
            },
            "State": "available",
            "SubnetIds": [
                "subnet-0e93b1032f200f270",
                "subnet-0e10a30c478bff9ca",
                "subnet-00cdc2582ba0547d3"
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "attach-to-jenkins"
                }
            ],
            "TransitGatewayAttachmentId": "tgw-attach-0c57f6653faf82796",
            "TransitGatewayId": "tgw-0bb1396f4b2cc782c",
            "VpcId": "vpc-0e39b445bad43bfed",
            "VpcOwnerId": "167389268608"
        }
    ]
}
