tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/us-east-1/ec2-describe-transit-gateways.json
{
    "TransitGateways": [
        {
            "CreationTime": "2020-07-08T16:05:24+00:00",
            "Options": {
                "AmazonSideAsn": 64512,
                "AssociationDefaultRouteTableId": "tgw-rtb-080082c0d1e533511",
                "AutoAcceptSharedAttachments": "disable",
                "DefaultRouteTableAssociation": "enable",
                "DefaultRouteTablePropagation": "enable",
                "DnsSupport": "enable",
                "MulticastSupport": "disable",
                "PropagationDefaultRouteTableId": "tgw-rtb-080082c0d1e533511",
                "VpnEcmpSupport": "enable"
            },
            "OwnerId": "167389268608",
            "State": "available",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Local TGW"
                }
            ],
            "TransitGatewayArn": "arn:aws:ec2:us-east-1:167389268608:transit-gateway/tgw-03e7b829f5c16fa13",
            "TransitGatewayId": "tgw-03e7b829f5c16fa13"
        },
        {
            "CreationTime": "2020-07-24T09:34:00+00:00",
            "Description": "Connect Cloudrail VPCs together",
            "Options": {
                "AmazonSideAsn": 64512,
                "AssociationDefaultRouteTableId": "tgw-rtb-0d11e2a57a894be1e",
                "AutoAcceptSharedAttachments": "enable",
                "DefaultRouteTableAssociation": "enable",
                "DefaultRouteTablePropagation": "enable",
                "DnsSupport": "enable",
                "MulticastSupport": "disable",
                "PropagationDefaultRouteTableId": "tgw-rtb-0d11e2a57a894be1e",
                "VpnEcmpSupport": "enable"
            },
            "OwnerId": "645376637575",
            "State": "available",
            "Tags": [],
            "TransitGatewayArn": "arn:aws:ec2:us-east-1:645376637575:transit-gateway/tgw-055844df81fd326ba",
            "TransitGatewayId": "tgw-055844df81fd326ba"
        },
        {
            "CreationTime": "2020-09-01T06:34:54+00:00",
            "Description": "Use to access cloudrail env accounts from jenkins",
            "Options": {
                "AmazonSideAsn": 64771,
                "AssociationDefaultRouteTableId": "tgw-rtb-000b04a24d3136a6c",
                "AutoAcceptSharedAttachments": "enable",
                "DefaultRouteTableAssociation": "enable",
                "DefaultRouteTablePropagation": "enable",
                "DnsSupport": "enable",
                "MulticastSupport": "disable",
                "PropagationDefaultRouteTableId": "tgw-rtb-000b04a24d3136a6c",
                "VpnEcmpSupport": "enable"
            },
            "OwnerId": "100552308875",
            "State": "available",
            "Tags": [],
            "TransitGatewayArn": "arn:aws:ec2:us-east-1:100552308875:transit-gateway/tgw-0bb1396f4b2cc782c",
            "TransitGatewayId": "tgw-0bb1396f4b2cc782c"
        }
    ]
}
